[project]
name = "ftmsant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openant>=1.3.4",
    "loguru>=0.7.2",
    "pyobjc-core>=10.0",
    "pyobjc-framework-CoreBluetooth>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
]
